# English-Tutor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ERD.md  English Circulum.md  IMPLEMENTATION-PLAN.md  MEMORY.md  MVP-Plan.md  PRD.md  Queensland English Tutoring Blueprint.md  README.md  reaserch.md  teacher-skills.md  test-context.md
backend/: .env.example  README.md  pyproject.toml  seed.py
backend/app/: config.py  database.py  main.py  models.py  seed.py
backend/app/api/: __init__.py  deps.py  routes.py  schemas.py
backend/app/eval/: __init__.py  __main__.py  fixtures.py  judge.py  rules.py  runner.py  scorecard.py
backend/app/llm/: __init__.py  anthropic.py  deepseek.py  factory.py  fake.py  provider.py
backend/app/sessions/: __init__.py  interactive.py  orchestrator.py
backend/app/skills/: __init__.py  executor.py  loader.py  router.py  rubric_parser.py  sync.py
backend/tests/: conftest.py  test_api_daily_loop.py  test_config.py  test_diagnosis_router.py  test_eval_fixtures.py  test_eval_judge.py  test_eval_rules.py  test_eval_runner.py  test_llm.py  test_models.py  test_rubric_parser.py  test_seed.py  test_session_orchestrator.py  test_skill_executor.py  test_skill_loader.py  test_skill_sync.py
frontend/: index.html  package-lock.json  package.json
frontend/scripts/: dev.mjs
frontend/src/: App.css  App.tsx  api.ts  index.css  storage.ts  types.ts
skills/: README.md
skills/check-structure/: SKILL.md  rubric.md
skills/diagnose-errors/: SKILL.md  taxonomy.md
skills/elevate-vocabulary/: SKILL.md  tiers.md
skills/give-feedback/: SKILL.md  (+1 more)
(+23 files in other folders)
